# vau

./: .gitignore  CMakeLists.txt  README.md
devel/: FindMuPDF.cmake  c_cpp_properties.json.in  mupdf-wasm-makefile.patch
platform/macos/: Base.xcconfig  Config.xcconfig.cmake  Info.plist  Vau.xcconfig  VauQt.xcconfig
platform/macos/Vau.xcodeproj/: project.pbxproj
platform/macos/Vau.xcodeproj/project.xcworkspace/xcuserdata/mgubi.xcuserdatad/: UserInterfaceState.xcuserstate
platform/macos/Vau.xcodeproj/xcshareddata/xcschemes/: Vau.xcscheme  VauQt.xcscheme
platform/macos/Vau.xcodeproj/xcuserdata/mgubi.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
platform/macos/Vau.xcodeproj/xcuserdata/mgubi.xcuserdatad/xcschemes/: xcschememanagement.plist
platform/wasm/: TestScheme.html  Vau.html  mylib.js  notes.md  vau_worker.js
resources/progs/: init-vau-s7.scm  init-vau.scm
resources/progs/generic/: document-part.scm
resources/progs/kernel/boot/: abbrevs.scm
resources/styles/article/ams/: amsart.ts
resources/vau-tests/: ibp-exponential-example.tm
src/: CMakeLists.txt  config.h
src/Data/: CMakeLists.txt
src/Data/Convert/: CMakeLists.txt  convert.hpp
src/Data/Convert/Generic/: CMakeLists.txt
src/Data/Convert/Scheme/: from_scheme.cpp
src/Data/Convert/Tex/: CMakeLists.txt
src/Data/Convert/Xml/: CMakeLists.txt  fromxml.cpp
src/Data/String/: CMakeLists.txt  wencoding.cpp
src/Data/Tree/: CMakeLists.txt
src/Graphics/: CMakeLists.txt
src/Graphics/Fonts/: find_font.cpp  font_spacing.cpp  smart_font.cpp  virtual_font.cpp
src/Graphics/Renderer/: CMakeLists.txt  basic_renderer.cpp  printer.cpp  renderer.cpp
src/Plugins/Freetype/: free_type.cpp
src/Plugins/MuPDF/: mupdf_picture.cpp  mupdf_renderer.cpp
src/Plugins/Pdf/: pdf_hummus_renderer.cpp
src/Scheme/: CMakeLists.txt
src/Scheme/Glue/: CMakeLists.txt
src/Scheme/Guile/: CMakeLists.txt
src/Scheme/S7/: s7_tm.cpp  s7_tm.hpp
src/Scheme/Scheme/: CMakeLists.txt  glue.cpp  object.cpp
src/System/: CMakeLists.txt  config.h.bak  config.h.cmake  tm_configure.hpp.bak  tm_configure.hpp.cmake
src/System/Boot/: CMakeLists.txt
src/System/Files/: CMakeLists.txt  file.cpp  image_files.cpp
src/System/Language/: language.cpp  locale.cpp
src/System/Link/: CMakeLists.txt  socket_link.cpp
src/System/Misc/: CMakeLists.txt
src/Typeset/Boxes/Basic/: boxes.cpp
src/Typeset/Bridge/: typesetter.cpp
src/Vau/: CMakeLists.txt  boot.hpp  init-vau.scm  preferences.cpp  vau-init-unused.scm  vau_buffer.cpp  vau_buffer.hpp  vau_editor.cpp  vau_editor.hpp  vau_glue-bak-1.hpp  vau_glue.cpp  vau_glue.cpp.old  vau_glue.hpp  vau_js.cpp  vau_lib.cpp  vau_lib.hpp  vau_main.cpp  vau_main.hpp  vau_stuff.cpp  vau_stuff.hpp
vau_home/fonts/: font-characteristics.scm  font-database.scm  font-features.scm
vau_home/system/cache/: font_cache.scm  stat_cache.scm  validate_cache.scm
